# optimaltransport

./: CMakeLists.txt  README.md
Rpackage/: .CMakeLists.txt.swp  CMakeLists.txt
Rpackage/gmra/: DESCRIPTION  NAMESPACE
Rpackage/gmra/man/: gmra.Rd
Rpackage/gmra/src/: gmra.cc
Rpackage/mop/: ChangeLog  DESCRIPTION  NAMESPACE  README.txt
Rpackage/mop/R/: multiscale.transport.R  multiscale.transport.auxillary.R  multiscale.transport.decompositions.R  multiscale.transport.plot.R  neighbor.min.flow.R  transport.R
Rpackage/mop/man/: multiscale.transport.Rd
Rpackage/mop/src/: .Rhistory  Makevars  mop.cc  mop.cc_old  mop_config.h
Rpackage/sinkhorn/: ChangeLog  DESCRIPTION  NAMESPACE
Rpackage/sinkhorn/R/: sinkhorn.transport.R
Rpackage/sinkhorn/man/: multiscale.sinkhorn.transport.Rd
Rpackage/sinkhorn/src/: Makevars  Makevars.win  sinkhorn.cc
commandline/: .EigenStreamingRandomSVD.cxx.swp  CMakeLists.txt  CMakeListsRelease.txt  CreateAATree.cxx  CreateIKMTree.cxx  CreateIPCATree.cxx  CrossWaveletSimilarityIPCA.cxx  EigenRowRandomSVD.cxx  EigenStreamingRandomSVD.cxx  Grid3dMinFlow.cxx  IPCADensityEstimator.cxx  IPCADists.cxx  IPCAGWT.cxx  IPCAGWTCompress.cxx  IPCAGWTSquared.cxx  IPCATransport.cxx  IPCATreeCrossWasserstein.cxx  IPCATreeLeafDistances.cxx  IPCATreePairwiseWasserstein.cxx  IPCATreeStatistics.cxx  IPCATreeWasserstein.cxx  LPDistanceIPCA.cxx  MatrixMinFlow.cxx  NodeSimilarityIPCA.cxx  SinkhornTransport.cxx  SparseSinkhornTransport.cxx  TransportLP.cxx  WaveletSimilarity2IPCA.cxx  WaveletSimilarityIPCA.cxx
lib/: CPLEXNetworkSolver.h  CPLEXSolver.h  CapacityPropagationStrategy.h  DenseSinkhornTransport.h  EigenStreamingRandomRange.h  EigenStreamingRandomSVD.h  ExpandNeighborhoodStrategy.h  GLPKSolver.h  GMRATree.h  Grid3dMinFlow.h  HierarchicalAssignment.h  IteratedCapacityPropagationStrategy.h  LPSolver.h  LemonSolver.h  MOSEKSolver.h  MatrixMinFlow.h  MaxEntropyPropagationStrategy.h  MultiscaleEMD.h  MultiscaleTransport.h  MultiscaleTransportGrid.h  MultiscaleTransportLP.h  NeighborhoodPropagationStrategy.h  NeighborhoodStrategy.h  PotentialNeighborhoodStrategy.h  PropagationStrategy.h  RandomizedNeighborhoodPropagationStrategy.h  RandomizedPropagationStrategy.h  RefineNeighborhoodStrategy.h  SinkhornPropagationStrategy.h  TransportBregman.h  TransportLP.h  TransportLPSolver.h
